2003-02-09  Mike Oliphant  <oliphant@gtk.org>

	* discdb.c: include <locale.h> (Ed Goforth)
	* ja.po: updated (Takeshi AIHANA)
	* doc/C/Makefile.am: install images properly (Todd)
	* configure.in/grip.spec: upped version to 3.0.6

2003-01-12  Mike Oliphant  <oliphant@gtk.org>

	* de.po: updated (Goetz Waschk)
	* ja.po: updated (Takeshi AIHANA)
	* ru.po: updated (Michael Shigorin)
	* discdb.c: work around for bug in libghttp that sends "HTTP/1,1"
	  instead of "HTTP/1.1" on some systems (Michael Mauch)
	* rip.c/grip.c/cdplay.c: use 'ripping_a_disc' instead of 'ripping'
	  to check if a rip is in progress
	* doc/C: updated screenshots
	* grip.sgml: updated
	* rip.c: only increment num_wavs if we are encoding
	* rip.c: don't delete wav file on aborted encode
	* configure.in/grip.spec: upped version to 3.0.5
	
2002-12-25  Mike Oliphant  <oliphant@gtk.org>

	* zh_CN.po: updated (Merlin Ma)
	* fr.po/grip.spec: updated (Eric Lassauge)
	* ca.po: updated (Jordi Mallach)
	* ru.po: updated (Mishell Baranov)
	* rip.c/grip.c/grip.h/gripcfg.c: made stopping the cdrom drive
	  between ripping tracks optional, and default to not (zongo)
	* es.po: got rid of duplicate entries
	* grip.c/grip.h/rip.c: added overall progress indicators
	  (Przemyslaw Kryger)
	* grip.c/grip.h/rip.c: added tolerance to avoid getting false
	  "no disc" readings whe drive is spinngin down from a rip
	* cdplay.c: fixed bug preventing auto-rip on a disc that had been
	  previously inserted
	* cdplay.c: scroll mouse no longer selects/unselects track rip
	  check
	* cdplay.c: reset to first track when disc ends
	* rip.c: rip entire cd now obeys Rip+Encode vs Rip Only
	* configure.in/grip.spec: upped version to 3.0.4	
		
2002-09-21  Mike Oliphant  <oliphant@gtk.org>

	* id3.c: added some #includes
	* de.po: updated (Goetz Waschk)
	* grip.sgml: MP3->Encoder, and added new config options
	* doc/C: created new screenshots
	* README: added pointers to get more help