@@ -2,7 +2,7 @@ AC_INIT(src/main.c)
 
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(grip,3.0.6)
+AM_INIT_AUTOMAKE(grip,3.0.7)
 
 AM_MAINTAINER_MODE
 
