@@ -1,3 +1,10 @@
+2003-04-22  Mike Oliphant  <oliphant@gtk.org>
+
+	* fr.po: updated (Eric Lassauge)
+	* cdplay.c: make cddb lookups not abortable until it is fixed so
+	  that it works properly
+	* configure.in/grip.spec: upped version to 3.0.7
+	
 2003-02-09  Mike Oliphant  <oliphant@gtk.org>
 
 	* discdb.c: include <locale.h> (Ed Goforth)
